Changes in version 2.2-0
  o Fixed typo in box constraint example in DEoptim.Rd
  o Thanks to Joshua Ulrich and Kris Boudt, parallel operation is possible, 
    using foreach.
  o sandbox directory added, with example parallel code
  o Kris Boudt added as a contributor
  o foreach added as suggested package
  o foreachArgs arguement added to DEoptim.control() function 
  o VignetteDepends metadata added to .Rnw 
  o Added mapping function for integer / cardinality constraints

Changes in version 2.1-2
  o Modified CITATION file and Rd files.
  o Joshua Ulrich fixed the crash caused by a stack overflow when optimizing
    many parameters.  Thanks to Suraj Gupta for pointing out the problem. 

Changes in version 2.1-1
  o Added portfolio optimization vignette.
  o Bug with reltol / steptol stopping criteria fixed.
  o Changed JADE to be 'on' when c > 0 for *any* strategy and set c=0
    as default in DEoptim.control (JADE is 'off').

Changes in version 2.1-0
  o Added documentation of strategy six.
  o Fixed typos in vignette. 
  o Modified CITATION file and Rd files.  

Changes in version 2.0-9
  o Added vignette. 

Changes in version 2.0-8
  o Many improvements in the C code, thanks to Dirk Eddelbuettel's detailed
    code review. Dirk's contributions include:
      - fixed gd_bestmemit and gd_bestval initialization to avoid segfaults
      - propegate nfeval back to DEoptimC function
      - allocate parameter vector once, rather than once per evaluate call
      - allocate ia_urn1 once, rather than once per permute call
      - replace strategy if/else block with switch statement
  o More bug fixes and optimizations when bs=TRUE
  o Fixed bug in initial population check. Thanks to Vinecius Veloso.
  o Added '...' to objective function call in evaluate rather than in DEoptim
    R function. This yields a speed gain, since it avoids an extra function
    call. Thanks to Dirk Eddelbuettel for the idea.

Changes in version 2.0-7