@@ -3,7 +3,7 @@ Version: 2.2-0
 Title: Global optimization by Differential Evolution
 Author: David Ardia, Katharine Mullen, Brian Peterson, Joshua Ulrich
 Contributor:  Kris Boudt 
-Maintainer: Katharine Mullen <katharine.mullen@nist.gov>
+Maintainer: Katharine Mullen <mullenkate@gmail.com>
 Description: This package provides the DEoptim function which performs
         global optimization by differential evolution.
 Suggests: foreach, vcd, lattice, quantmod, PerformanceAnalytics
