@@ -10,7 +10,8 @@
 DEoptim.control(VTR = -Inf, strategy = 2, bs = FALSE, NP = NA,
   itermax = 200, CR = 0.5, F = 0.8, trace = TRUE, initialpop = NULL,
   storepopfrom = itermax + 1, storepopfreq = 1, p = 0.2, c = 0, reltol,
-   steptol, foreachArgs = list())
+  steptol, parallelType = 0, packages = c(), parVar = c(),
+  foreachArgs = list())
 }
 \arguments{
    \item{VTR}{the value to be reached. The optimization process
@@ -75,7 +76,27 @@ DEoptim.control(VTR = -Inf, strategy = 2, bs = FALSE, NP = NA,
    reltol)} after \code{steptol} steps. Defaults to
    \code{sqrt(.Machine$double.eps)}, typically about \code{1e-8}.}
  \item{steptol}{see \code{reltol}. Defaults to \code{itermax}.}
- \item{foreachArgs}{A list of named arguments for the \code{foreach}
+ \item{parallelType}{Defines the type of parallelization to employ, if
+   any.
+    \code{0}: The default, this uses \code{DEoptim} one only one core.
+    \code{1}: This uses all available cores, via the \pkg{parallel}
+    package, to run \code{DEoptim}.  If \code{parallelType=1}, then the
+    \code{packages} argument and the \code{parVar} argument need to
+    specify the packages required by the objective function and the
+    variables required in the environment, respectively. 
+    \code{2}: This uses the \pkg{foreach} package for parallelism; see
+    the \code{sandbox} directory in the source code for examples.  If
+    \code{parallelType=1}, then the \code{foreachArgs} argument can pass
+    the options to be called with \code{foreach}.  
+  }
+  \item{packages}{Used if  \code{parallelType=1}; a list of
+    package names (as strings) that need to be loaded for use by the objective
+  function. }
+\item{parVar}{Used if  \code{parallelType=1};  a list of variable names
+  (as strings) that need to exist in the environment for use by the
+  objective function or are used as arguments by the objective
+  function. }  
+  \item{foreachArgs}{A list of named arguments for the \code{foreach}
     function from the
     package \pkg{foreach}.  The arguments \code{i}, \code{.combine} and
     \code{.export} are not possible to set here; they are set
@@ -212,6 +233,7 @@ DEoptim.control(NP = 20)
 ## set the population size, the number of iterations and don't
 ## display the iterations during optimization
 DEoptim.control(NP = 20, itermax = 100, trace = FALSE)
+   
 }
 \keyword{nonlinear}
 \keyword{optimize}
